Fixed Photo component overlapping nav

--- a/src/app/main-nav/main-nav.component.scss
+++ b/src/app/main-nav/main-nav.component.scss
@@ -6,7 +6,7 @@
 
 .sidenav {
   width: 200px;
-
+  z-index: 5;
 
 }
 
