--- a/src/app/photo/photo.component.scss
+++ b/src/app/photo/photo.component.scss
@@ -23,3 +23,8 @@ mat-tab {
     display: block;
     border-radius: 0.2em;
 }
+
+mat-tab-group {
+    z-index: 0;
+    position: relative;
+}
